k8s/argocd/base/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.aws.wiktorkowalski.pl`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
      middlewares:
        - name: secure-headers
          namespace: traefik-system
  tls:
    secretName: argocd-tls
